--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
                     <h2>Twitter Analytics <br> Taken To a Whole New <br> Level. </h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, ducimus? Ullam dicta reiciendis debitis minus quasi rerum, quo libero, obcaecati veritatis non commodi. Molestias, ipsa error. Nisi obcaecati odio fugiat officiis maiores tenetur, distinctio aliquid quos quae eligendi corrupti dolores mollitia ut quaerat voluptatem neque, temporibus quis amet. Ea, atque!</p>
                     <button class="btnnnnn"><i class="fab fa-twitter"></i>Sign In With Twitter</button> <span>Learn More --></span> <br>
-                    <img src="img/userAvatar01.svg" alt="" srcset="">
-                    <img src="img/userAvatar02.svg" alt="" srcset="">
-                    <img src="img/userAvatar03.svg" alt="" srcset="">
-                    <img src="img/userAvatar04.svg" alt="" srcset="">
-                    <img src="img/userAvatar05.svg" alt="" srcset="">
-                    <img src="img/userAvatar06.svg" alt="" srcset="">
-                    <img src="img/userAvatar07.svg" alt="" srcset="">
-                    <img src="img/userAvatar08.svg" alt="" srcset="">
-                    <img src="img/userAvatar09.svg" alt="" srcset="">
+                    <img src="./userAvatar01.svg" alt="" srcset="">
+                    <img src="./userAvatar02.svg" alt="" srcset="">
+                    <img src="./userAvatar03.svg" alt="" srcset="">
+                    <img src="./userAvatar04.svg" alt="" srcset="">
+                    <img src="./userAvatar05.svg" alt="" srcset="">
+                    <img src="./userAvatar06.svg" alt="" srcset="">
+                    <img src="./userAvatar07.svg" alt="" srcset="">
+                    <img src="./userAvatar08.svg" alt="" srcset="">
+                    <img src="./userAvatar09.svg" alt="" srcset="">
                     <p>join 195 other who have analyz there followers and <br> shedules 1342 tweets!</p>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <img src="img/Hero Image (Desktop View).png" height="70%"  width="110%" alt="" srcset="">
+                    <img src="./Hero Image (Desktop View).png" height="70%"  width="110%" alt="" srcset="">
                 </div>
             </div>
         </div>
@@ -69,14 +69,14 @@
               <h2>Feature That Help You <br> Tweet Smarter</h2>
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <div class="card">
-                        <img src="img/userAvatar01.svg" height="80px " width="80px" alt="" srcset="">
+                        <img src="./userAvatar01.svg" height="80px " width="80px" alt="" srcset="">
                         <h1>Analytics</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam a, perferendis id adipisci debitis similique, nulla eveniet possimus quas error mollitia quaerat atque commodi provident!</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <div class="card">
-                        <img src="img/userAvatar02.svg" height="80px " width="80px" alt="" srcset="">
+                        <img src="./userAvatar02.svg" height="80px " width="80px" alt="" srcset="">
                         <h1>Smart Analyzer</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam a, perferendis id adipisci debitis similique, nulla eveniet possimus quas error mollitia quaerat atque commodi provident!</p>
                     </div>
@@ -85,14 +85,14 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 abs">
                     <div class="card">
-                        <img src="img/userAvatar03.svg" height="80px " width="80px" alt="" srcset="">
+                        <img src="./userAvatar03.svg" height="80px " width="80px" alt="" srcset="">
                         <h1>Sheduls</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam a, perferendis id adipisci debitis similique, nulla eveniet possimus quas error mollitia quaerat atque commodi provident!</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 abs">
                     <div class="card">
-                        <img src="img/userAvatar04.svg" height="80px " width="80px" alt="" srcset="">
+                        <img src="./userAvatar04.svg" height="80px " width="80px" alt="" srcset="">
                         <h1>Dark  Mood</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam a, perferendis id adipisci debitis similique, nulla eveniet possimus quas error mollitia quaerat atque commodi provident!</p>
                     </div>
@@ -108,7 +108,7 @@
             <div class="card">
               <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12">
-                  <img src="img/userAvatar01.svg" height="90px">
+                  <img src="./userAvatar01.svg" height="90px">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
                   <h4>Sara May</h4>
@@ -126,7 +126,7 @@
             <div class="card">
               <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12">
-                  <img src="img/userAvatar02.svg" height="90px">
+                  <img src="./userAvatar02.svg" height="90px">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
                   <h4>JackScott</h4>
@@ -144,7 +144,7 @@
             <div class="card">
               <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12">
-                  <img src="img/userAvatar03.svg" height="90px">
+                  <img src="./userAvatar03.svg" height="90px">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
                   <h4>Jessica May</h4>
